0.70    ?? March 2006
        Support for moderation on a per-node basis.
        Update to the database schema: added needs_moderation column to
         node, and moderated column to content
        You will need to run cgi-wiki-setupdb to upgrade your database

0.69    22 February 2006
        Update to database schema: added an ID column to node, and changed
          the content + metadata tables to FK to the ID field, rather than
          the node name. Also added rails like schema_info table, to hold
          the current database schema version number
        You will need to run cgi-wiki-setupdb to upgrade your database

0.62    26 November 2004
        Fixed delete_node bug - now it's OK to delete eg version 2 and
          then version 3 of a node (ie you no longer have to delete
          versions in order newest first).

0.61    3 October 2004
        Added "ignore_case" option to ->node_exists.

0.60    30 September 2004
        Added generic ->new method to CGI::Wiki::Plugin (Tom Insam).

0.59    18 September 2004
        Added "ignore_case" option to list_recent_changes for use with
          metadata filtering.

0.58    18 September 2004
        Even more powerful metadata filtering!  You can now supply both
          "metadata_was" and "metadata_wasnt", or both "metadata_is"
          and "metadata_isnt", and they will be ANDed.
        (Also added the test I forgot to add to MANIFEST last time.)

0.57    18 September 2004
        Extended capabilities of list_recent_changes - more powerful
          metadata filtering (see docs for details).

0.56    14 September 2004
        Added Plucene search backend (with help from Simon Cozens).
        Applied Tom Insam's encoding patch.

0.55    There wasn't one.  Something bizarre happened with PAUSE.

0.54    25 June 2004
        Let ->delete_node take an optional version parameter.

0.53    18 June 2004
        Fixed CGI::Wiki::TestLib so $iterator->number actually does something.
