@@ -4,6 +4,9 @@
          node, and moderated column to content
         You will need to run cgi-wiki-setupdb to upgrade your database
 
+		Many more plugin points: pre_write + pre_retrieve (get to change
+		 the data), post_moderate + post_delete. See test 150 for examples
+
 0.69    22 February 2006
         Update to database schema: added an ID column to node, and changed
           the content + metadata tables to FK to the ID field, rather than
